[gd_scene load_steps=3 format=3 uid="uid://c4fxgtohrqei"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_2jxce"]
[ext_resource type="Theme" uid="uid://bv6ucyhl2e1we" path="res://main_theme.tres" id="2_g1dkx"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2jxce")

[node name="Container" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 1265.0
offset_bottom = 708.0

[node name="Top" type="VBoxContainer" parent="Container"]
layout_mode = 2

[node name="TimerLabel" type="Label" parent="Container/Top"]
layout_mode = 2
theme = ExtResource("2_g1dkx")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "00:00:00"

[node name="ScoreLabel" type="Label" parent="Container/Top"]
layout_mode = 2
theme = ExtResource("2_g1dkx")
theme_override_colors/font_color = Color(0.945098, 0.835294, 0.133333, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "0"

[node name="EnergyBar" type="ProgressBar" parent="."]
layout_mode = 2
offset_left = 15.0
offset_top = 693.0
offset_right = 349.0
offset_bottom = 708.0
theme = ExtResource("2_g1dkx")
value = 100.0
show_percentage = false
